--- a/about.html
+++ b/about.html
@@ -455,9 +455,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- Countdown-Timer-JavaScript -->
 			<script src="js/simplyCountdown.js"></script>
 			<script>
-				//var d = new Date(new Date().getTime() + 948 * 120 * 120 * 2000);
+				var d = new Date(new Date().getTime() + 948 * 120 * 120 * 2000);
 
-				var d = new Date("June 15, 2017 10:00:00");
 				// default example
 				simplyCountdown('.simply-countdown-one', {
 					year: d.getFullYear(),
