--- a/index.html
+++ b/index.html
@@ -1,37 +1,27 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-<title>Wedding Proposer  a Wedding Category Bootstrap Responsive Website Template | Home :: w3layouts</title>    
-<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /><!-- fontawesome css -->     
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" /><!-- Bootstrap stylesheet -->
-<link href="css/snow.css" rel="stylesheet" type="text/css" media="all" /><!-- stylesheet -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" /><!-- stylesheet -->
-<!-- meta tags -->
+<title>Flávio & Daiane</title>    
+<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /> 
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/snow.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Wedding Proposer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
+
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- //meta tags -->
-<!--fonts-->
+
 <link href="//fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700" rel="stylesheet">
-<!--//fonts-->
+
 </head>
 <body>
-<!-- header -->
+
 	<header>
 		<div class="container">
-			<!-- nav -->
 			<nav class="navbar navbar-inverse">
 			  <div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 				  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="sr-only">Toggle navigation</span>
@@ -40,7 +30,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 				  </button>
 				<div class="logo">
-					<h1><a href="index.html"><span>WP</span> <div class="logo-img"><img src="images/in-love.png" alt="img09"/></div><p class="sub_title">Wedding Proposer</p> </a></h1>
+					<h1><a href="index.html"><img src="images/in-love.png" alt="img09"/><p class="sub_title">>Flávio & Daiane</p></a></h1>
 				</div>	
 				</div>
 
@@ -427,8 +417,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  <div class="snow background layered"></div>
 			</div>
   <div class="agile-w3l-sec">
-              <h3>The best gift will be your participation, thanks to all</h3>
-			  <p>Jasmin <span>&</span> Kyle Lee</p>
+              <h3>Contamos com você nesta data, pois você é especial para nós!</h3>
+			  <p>Flávio <span>&</span> Daiane</p>
 			  <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <i class="fa fa-heart-o" aria-hidden="true"></i></a> </div>
   	</div>
 
