--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
-				<div class="logo">
-					<h1><a href="index.html"><img src="images/in-love.png" alt="img09"/><p class="sub_title">>Flávio & Daiane</p></a></h1>
+				<div>
+					<h1><a href="index.html"><img src="images/in-love.png"/></a></h1>
 				</div>	
 				</div>
 
@@ -38,17 +38,10 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <nav class="cl-effect-13" id="cl-effect-13">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="gallery.html">Wedding Albums</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-								<ul class="dropdown-menu agile_short_dropdown">
-									<li><a href="icons.html">Icons</a></li>
-									<li><a href="codes.html">Typography</a></li>
-								</ul>
-							</li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li class="active"><a href="index.html">Início</a></li>
+							<li><a href="about.html">Sobre nós</a></li>
+							<li><a href="gallery.html">Nosso Album</a></li>
+							<li><a href="contact.html">Envie uma mensagem</a></li>
 						</ul>
 						
 					</nav>
