--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</li>
 							<li>
 								  <div class="banner_agile-info">
-									  <h3>Vamos casar</h3>
+									  <h3>Nós vamos casar</h3>
 									  <p>FLÁVIO & DAIANE</p>
 									   <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png" alt="wp"/></a> </div>
 								  </div>
@@ -410,7 +410,7 @@
 			  <div class="snow background layered"></div>
 			</div>
   <div class="agile-w3l-sec">
-              <h3>Contamos com a sua presença nesta data especial!</h3>
+              <h3>Contamos com sua presença nesta data especial!</h3>
 			  <p>Flávio <span>&</span> Daiane</p>
 			  <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <i class="fa fa-heart-o" aria-hidden="true"></i></a> </div>
   	</div>
