--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<div class="about_section">
 					<div class="container">
 						   <div class="wthree_title_agile">
-						        <h2>Nossa <span>Historia</span></h2>
+						        <h2>Nossa <span>História</span></h2>
 								<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 								
 							</div>
@@ -265,8 +265,11 @@
 				   <figure class="effect-moses">
 							<img src="images/p1.jpg" alt="" />
 							<figcaption>
-								<h4>Wedding Proposer</h4>
-								<p>We Make Your Dream True</p>
+								<h4>Veja nossa lista de...</h4>
+								<p style="color:white;">
+									PRESENTES
+									<a href="www.casasbahia.com.br"><font color="#ffffff">CLIQUE AQUI</font></a>
+								</p>
 							</figcaption>			
 				</figure>
 
