--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
 				   <figure class="effect-moses">
 							<img src="images/p1.jpg" alt="" />
 							<figcaption>
-								<h4>Veja nossa lista de...</h4>
+								<h4>Clique aqui e veja...</h4>
 								<p style="color:white;">
-									PRESENTES
-									<a href="www.casasbahia.com.br"><font color="#ffffff">CLIQUE AQUI</font></a>
+									a lista de 
+									<a href="http://www.casasbahia.com.br"><font color="#ff33cc">PRESENTES</font></a>
 								</p>
 							</figcaption>			
 				</figure>
