--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
 				   <figure class="effect-moses">
 							<img src="images/p1.jpg" alt="" />
 							<figcaption>
-								<h4>Clique aqui e veja...</h4>
+								<h4>Clique aqui...</h4>
 								<p style="color:white;">
-									a lista de 
+									nossa lista de 
 									<a href="http://www.casasbahia.com.br"><font color="#ff33cc">PRESENTES</font></a>
 								</p>
 							</figcaption>			
