--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 				  <nav class="cl-effect-13" id="cl-effect-13">
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="index.html">Início</a></li>
-							<li><a href="about.html">Sobre nós</a></li>
 							<li><a href="gallery.html">Nosso Album</a></li>
-							<li><a href="contact.html">Envie uma mensagem</a></li>
 						</ul>
 						
 					</nav>
@@ -265,11 +263,13 @@
 				   <figure class="effect-moses">
 							<img src="images/p1.jpg" alt="" />
 							<figcaption>
-								<h4>Clique aqui...</h4>
-								<p style="color:white;">
-									nossa lista de 
-									<a href="http://www.casasbahia.com.br"><font color="#ff33cc">PRESENTES</font></a>
-								</p>
+								<h4>Clique e veja...</h4>
+								<a href="http://www.casasbahia.com.br">
+									<p style="color:white;">
+										nossa lista de 
+										<font color="#ff33cc">PRESENTES</font>
+									</p>
+								</a>
 							</figcaption>			
 				</figure>
 
@@ -313,21 +313,20 @@
 			<div class="wthree-news text-center">
 				<div class="container">
 					<div class="wthree_title_agile">
-						        <h3>Our <span>Events</span></h3>
+						        <h3>Nosso <span>Evento</span></h3>
 								<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 								
 							</div>
-						 <p class="sub_para">OUR WEDDING EVENTS</p>
+						 <p class="sub_para">DETALHES SOBRE O EVENTO</p>
 						 <div class="inner_w3l_agile_grids">
 					<div class="col-md-6 wthree-right">
 						<div class="w3-agile-left">
 							<div class="work-left">
-								<h4>22 july</h4>
+								<h4>10 horas</h4>
 							</div>
 							<div class="agileits-right text-left">
-								<a href="single.html">News post-1</a>
-								<p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu 
-									fugiat nulla pariatur.</p>
+								<a> - Chegada</a>
+								<p>A partir das 10 horas da manhã o evento vai iniciar.</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -346,12 +345,11 @@
 						</div>
 						<div class="w3-agile-left2">
 							<div class="work-left">
-								<h4>02 Aug</h4>
+								<h4>11 horas</h4>
 							</div>
 							<div class="agileits-right text-left">
-								<a href="single.html">News post-2</a>
-								<p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu 
-									fugiat nulla pariatur.</p>
+								<a> - Cerimônia</a>
+								<p>Chegada a hora mais importante do dia, a realização da cerimônia de casamento.</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -412,12 +410,30 @@
 			  <div class="snow background"></div>
 			  <div class="snow background layered"></div>
 			</div>
-  <div class="agile-w3l-sec">
+	<div class="agile-w3l-sec">
               <h3>Contamos com sua presença nesta data especial!</h3>
 			  <p>Flávio <span>&</span> Daiane</p>
 			  <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <i class="fa fa-heart-o" aria-hidden="true"></i></a> </div>
   	</div>
-
+	</br>
+  	<p class="sub_para" style="color:white;">CONFIRME SUA PRESENÇA</p>
+	<div class="w3l_inner_section">
+	<div class="container">
+       <div class="w3_mail_grids">
+				<form action="mailto:flavio.augustot@gmail.com" method="post" enctype="text/plain">
+					<div class="col-md-6 w3_agile_mail_grid">
+						<textarea name="Message" placeholder="Sua mensagem" required=""></textarea>
+					</div>
+					<div class="col-md-6 w3_agile_mail_grid">
+							<input type="text" placeholder="Seu nome"  required="">
+							<input type="email" placeholder="Seu email" required="">
+							<input type="submit" value="Enviar">
+					</div>
+					<div class="clearfix"> </div>
+				</form>
+			</div>
+	   </div>
+	</div>		
 </div>
  
 <!--//bottom-->
@@ -481,7 +497,7 @@
 	<!-- Countdown-Timer-JavaScript -->
 			<script src="js/simplyCountdown.js"></script>
 			<script>
-				var d = new Date(new Date().getTime() + 948 * 120 * 120 * 2000);
+				var d = new Date("May 15, 2018 10:00:00");
 
 				// default example
 				simplyCountdown('.simply-countdown-one', {
