--- a/index.html
+++ b/index.html
@@ -261,18 +261,17 @@
      <div class="agile-homes-w3l  grid">
                 <div class="col-md-6 home-agile-left">
 				   <figure class="effect-moses">
-							<img src="images/p1.jpg" alt="" />
-							<figcaption>
-								<h4>Clique e veja...</h4>
-								<a href="http://www.casasbahia.com.br">
-									<p style="color:white;">
-										nossa lista de 
-										<font color="#ff33cc">PRESENTES</font>
-									</p>
+						<img src="images/p1.jpg" alt="" />
+						<figcaption>
+							<h4>Clique e veja...</h4>
+							<p style="color:white;">
+								Lista de presentes
+								<a href="http://www.casasbahia.com.br"> 
+									<b><font color="#ff33cc">CLIQUE AQUI</font></b>
 								</a>
-							</figcaption>			
-				</figure>
-
+							</p>
+						</figcaption>			
+					</figure>
 				</div>
 				<div class="col-md-6 home-agile-text">
 				   <h4>Wedding Ceremony</h4>
