--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 							<p style="color:white;">
 								Lista de presentes
 								<a href="http://www.casasbahia.com.br"> 
-									<b><font color="#ff33cc">CLIQUE AQUI</font></b>
+									<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
 								</a>
 							</p>
 						</figcaption>			
