--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="zxx">
 <head>
 <title>Flávio & Daiane</title>    
+<link rel="icon" href="images/icone.jpeg" type="image/x-icon" />
+<link rel="shortcut icon" href="images/icone.jpeg" type="image/x-icon" />
+
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /> 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/snow.css" rel="stylesheet" type="text/css" media="all" />
