--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
-				<div>
-					<h1><a href="index.html"><img src="images/in-love.png"/></a></h1>
+				<div align="center">
+					<h1><img src="images/in-love.png"/></h1>
+					<p class="sub_title">Flávio & Daiane</p>
 				</div>	
 				</div>
 
@@ -73,14 +74,14 @@
 								  <div class="banner_agile-info">
 									  <h3>Estamos realizando um sonho</h3>
 									  <p>FLÁVIO & DAIANE</p>
-									   <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png" alt="wp"/></a> </div>
+									   <div class="banner-mid-wthree"><img class="hvr-buzz" src="images/couple.png" /></div>
 								  </div>
 							</li>
 							<li>
 								  <div class="banner_agile-info">
 									  <h3>Nós vamos casar</h3>
 									  <p>FLÁVIO & DAIANE</p>
-									   <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png" alt="wp"/></a> </div>
+									   <div class="banner-mid-wthree"><img class="hvr-buzz" src="images/couple.png" /></a></div>
 								  </div>
 							</li>
 						</ul>
@@ -324,10 +325,10 @@
 					<div class="col-md-6 wthree-right">
 						<div class="w3-agile-left">
 							<div class="work-left">
-								<h4>10 horas</h4>
+								<h4>10hr</h4>
 							</div>
 							<div class="agileits-right text-left">
-								<a> - Chegada</a>
+								<a> Chegada</a>
 								<p>A partir das 10 horas da manhã o evento vai iniciar.</p>
 							</div>
 							<div class="clearfix"></div>
@@ -347,10 +348,10 @@
 						</div>
 						<div class="w3-agile-left2">
 							<div class="work-left">
-								<h4>11 horas</h4>
+								<h4>11hr</h4>
 							</div>
 							<div class="agileits-right text-left">
-								<a> - Cerimônia</a>
+								<a> Cerimônia</a>
 								<p>Chegada a hora mais importante do dia, a realização da cerimônia de casamento.</p>
 							</div>
 							<div class="clearfix"></div>
@@ -415,7 +416,7 @@
 	<div class="agile-w3l-sec">
               <h3>Contamos com sua presença nesta data especial!</h3>
 			  <p>Flávio <span>&</span> Daiane</p>
-			  <div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <i class="fa fa-heart-o" aria-hidden="true"></i></a> </div>
+			  <div class="banner-mid-wthree"><i class="fa fa-heart-o hvr-buzz" aria-hidden="true"></i></div>
   	</div>
 	</br>
   	<p class="sub_para" style="color:white;">CONFIRME SUA PRESENÇA</p>
@@ -444,7 +445,7 @@
 		<div class="container">
 			<div class="aglie-info-logo">
 			
-				<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png" alt="wp"/></a> </div>
+				<div class="banner-mid-wthree"><img class="hvr-buzz" src="images/couple.png"/></div>
 			</div>
 <!-- 			<ul class="aglieits-nav">
 				<li><a href="index.html">Home</a></li>
