--- a/index.html
+++ b/index.html
@@ -78,11 +78,13 @@
 								  </div>
 							</li>
 							<li>
-								  <div class="banner_agile-info">
-									  <h3>Nós vamos casar</h3>
-									  <p>FLÁVIO & DAIANE</p>
-									   <div class="banner-mid-wthree"><img class="hvr-buzz" src="images/couple.png" /></a></div>
+							  <div class="banner_agile-info">
+								  <h3>Nós vamos casar</h3>
+								  <p>FLÁVIO & DAIANE</p>
+								  <div class="banner-mid-wthree">
+								  	<img class="hvr-buzz" src="images/couple.png" />
 								  </div>
+							  </div>
 							</li>
 						</ul>
 				<div class="clearfix"></div>
@@ -444,8 +446,7 @@
 <div class="agile-footer">
 		<div class="container">
 			<div class="aglie-info-logo">
-			
-				<div class="banner-mid-wthree"><img class="hvr-buzz" src="images/couple.png"/></div>
+				<div class="banner-mid-wthree"><img class="hvr-buzz" src="images/couple.png" /></div>
 			</div>
 <!-- 			<ul class="aglieits-nav">
 				<li><a href="index.html">Home</a></li>
