--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 								  <div class="banner_agile-info">
 									  <h3>Estamos realizando um sonho</h3>
 									  <p>FLÁVIO & DAIANE</p>
-									   <div class="banner-mid-wthree"><img class="hvr-buzz" src="images/couple.png" /></div>
+									   <div class="banner-mid-wthree hvr-buzz">
+									   		<img src="images/couple.png" />
+									   </div>
 								  </div>
 							</li>
 							<li>
@@ -446,7 +448,7 @@
 <div class="agile-footer">
 		<div class="container">
 			<div class="aglie-info-logo">
-				<div class="banner-mid-wthree"><img class="hvr-buzz" src="images/couple.png" /></div>
+				<div class="banner-mid-wthree hvr-buzz"><img src="images/couple.png" /></div>
 			</div>
 <!-- 			<ul class="aglieits-nav">
 				<li><a href="index.html">Home</a></li>
