--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 							  <div class="banner_agile-info">
 								  <h3>Nós vamos casar</h3>
 								  <p>FLÁVIO & DAIANE</p>
-								  <div class="banner-mid-wthree">
-								  	<img class="hvr-buzz" src="images/couple.png" />
-								  </div>
+ 									<div class="banner-mid-wthree hvr-buzz">
+										<img src="images/couple.png" />
+									</div>
 							  </div>
 							</li>
 						</ul>
