--- a/index.html
+++ b/index.html
@@ -468,7 +468,8 @@
 			</div>
 
 			<div class="copy-right">
-				<p>© 2017 Flávio & Daiane. Todos os direitos reservados | Desenvolvido por <a href="http://www.linkedin.com/in/flavio7eixeira/">Flávio Teixeira</a></p>
+				<p>© 2017 Flávio & Daiane | Desenvolvido por 
+				<a href="http://www.linkedin.com/in/flavio7eixeira/">Flávio Teixeira</a></p>
 			</div>
 		</div>
 	</div>
