--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
-				<div align="center">
+				<div>
 					<h1><img src="images/in-love.png"/></h1>
-					<p class="sub_title">Flávio & Daiane</p>
+					<!--p class="sub_title">Flávio & Daiane</p -->
 				</div>	
 				</div>
 
