--- a/gallery.html
+++ b/gallery.html
@@ -1,13 +1,9 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-<title>Wedding Proposer  a Wedding Category Bootstrap Responsive Website Template | Albums :: w3layouts</title>    
+<title>Flávio & Daiane</title>    
+<link rel="icon" href="images/ring.png" type="image/x-icon" />
+<link rel="shortcut icon" href="images/ring.png" type="image/x-icon" />  
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /><!-- fontawesome css -->     
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" /><!-- Bootstrap stylesheet -->
 <link href="css/snow.css" rel="stylesheet" type="text/css" media="all" /><!-- stylesheet -->
@@ -17,23 +13,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- meta tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Wedding Proposer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- //meta tags -->
-<!--fonts-->
-<link href="//fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700" rel="stylesheet">
-<!--//fonts-->
+
 </head>
 <body>
-<!-- header -->
 	<header>
 		<div class="container">
-			<!-- nav -->
 			<nav class="navbar navbar-inverse">
 			  <div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 				  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="sr-only">Toggle navigation</span>
@@ -41,8 +28,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
-				<div class="logo">
-					<h1><a href="index.html"><span>WP</span> <div class="logo-img"><img src="images/in-love.png" alt="img09"/></div><p class="sub_title">Wedding Proposer</p> </a></h1>
+				<div>
+					<h1><img src="images/in-love.png"/></h1>
+					<!--p class="sub_title">Flávio & Daiane</p -->
 				</div>	
 				</div>
 
@@ -50,17 +38,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <nav class="cl-effect-13" id="cl-effect-13">
 						<ul class="nav navbar-nav">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li class="active"><a href="gallery.html">Wedding Albums</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-								<ul class="dropdown-menu agile_short_dropdown">
-									<li><a href="icons.html">Icons</a></li>
-									<li><a href="codes.html">Typography</a></li>
-								</ul>
-							</li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="index.html">Início</a></li>
+							<li class="active"><a href="gallery.html">Álbum</a></li>
 						</ul>
 						
 					</nav>
@@ -73,8 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!-- //nav -->
 		</div>
 	</header>
-	<!-- //header -->
-	<!-- banner-slider -->
+
 	<div class="w3ls_banner_section second">
 	  
      </div>
@@ -83,8 +61,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="w3l_agileits_breadcrumbs">
 		<div class="container">
 			<ul>
-				<li><a href="index.html">Home</a><span>«</span></li>
-				<li>Wedding Albums</li>
+				<li><a href="index.html">Início</a><span>«</span></li>
+				<li>Álbum</li>
 			</ul>
 		</div>
 	</div>
@@ -262,28 +240,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="agile-footer">
 		<div class="container">
 			<div class="aglie-info-logo">
-			
-				<div class="banner-mid-wthree"> <a href="index.html" class="hvr-buzz"> <img src="images/couple.png" alt="wp"/></a> </div>
+				<div class="banner-mid-wthree hvr-buzz"><img src="images/couple.png" /></div>
 			</div>
-			<ul class="aglieits-nav">
+<!-- 			<ul class="aglieits-nav">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="gallery.html">Wedding Albums</a></li>
 				<li><a href="icons.html">Icons</a></li>
 				<li><a href="contact.html">Contact</a></li>
-			</ul>
-<div class="w3_agileits_social_media">
+			</ul> -->
+			<div class="w3_agileits_social_media">
 					<ul>
 						
-						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<!-- <li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_behance"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="wthree_behance"><i class="fa fa-behance" aria-hidden="true"></i></a></li> -->
 					</ul>
-				</div>
+			</div>
 
 			<div class="copy-right">
-				<p>© 2017 Wedding Proposer. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+				<p>© 2017 Flávio & Daiane | Desenvolvido por 
+				<a href="http://www.linkedin.com/in/flavio7eixeira/">Flávio Teixeira</a></p>
 			</div>
 		</div>
 	</div>
