--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<li>
 							
 								  <div class="banner_agile-info">
-									  <h3>Estamos realizando um sonho</h3>
+									  <h3>Em breve...</h3>
 									  <p>FLÁVIO & DAIANE</p>
 									   <div class="banner-mid-wthree hvr-buzz">
 									   		<img src="images/couple.png" />
@@ -78,7 +78,7 @@
 							</li>
 							<li>
 							  <div class="banner_agile-info">
-								  <h3>Nós vamos casar</h3>
+								  <h3>Nós vamos casar!</h3>
 								  <p>FLÁVIO & DAIANE</p>
  									<div class="banner-mid-wthree hvr-buzz">
 										<img src="images/couple.png" />
