--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 	<div class="w3l_inner_section">
 	<div class="container">
        <div class="w3_mail_grids">
-				<form action="mailto:flavio.augustot@gmail.com" method="post" enctype="text/plain">
+				<form action="https://formspree.io/flavio.augustot@gmail.com" method="post">
 					<div class="col-md-6 w3_agile_mail_grid">
 						<textarea name="Message" placeholder="Sua mensagem" required=""></textarea>
 					</div>
