--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
 					<div class="col-md-6 w3_agile_mail_grid">
 							<input type="text" name="nome" placeholder="Seu nome"  required="">
 							<input type="email" name="email" placeholder="Seu email" required="">
-							<!--input type="hidden" name="_next" value="//site.io/thanks.html" /-->
-							<input type="text" name="_gotcha" style="display:none" />
+							<input type="hidden" name="_next" value="https://flavio7eixeira.github.io/casamento/" />
+
 							<input type="submit" value="Enviar">
 					</div>
 					<div class="clearfix"> </div>
