--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
 	</header>
 	<!-- //header -->
 	<!-- banner-slider -->
-<div class="alert alert-success fade in alert-dismissable" style="margin-top:18px;">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
-    <strong>Sucesso!</strong> A confirmação de sua presença foi realizada! =D.
-</div>
+
 	<div class="w3ls_banner_section">
 			<div class="snow-container">
 			  <div class="snow foreground"></div>
@@ -415,7 +412,7 @@
 					<div class="col-md-6 w3_agile_mail_grid">
 							<input type="text" name="nome" placeholder="Seu nome"  required="">
 							<input type="email" name="email" placeholder="Seu email" required="">
-							<input type="hidden" name="_next" value="https://flavio7eixeira.github.io/casamento/" />
+							<input type="hidden" name="_next" value="https://flavio7eixeira.github.io/casamento/sucesso.html" />
 							<input type="hidden" name="_language" value="pt" />
 							<input type="submit" value="Enviar">
 					</div>
