--- a/index.html
+++ b/index.html
@@ -187,11 +187,17 @@
 						       <div id="owl-demo" class="owl-carousel">
 							      <div class="item-owl">
 					                		<div class="test-review">
-						                	  <img src="images/s1.jpg" class="img-responsive" alt=""/>
-											  <h5>Groom</h5>
+						                	  <img src="images/m1.jpg" class="img-responsive" alt=""/>
+											  <h5>Ingrid</h5>
 					                	    </div>
 					                </div>
 					                 <div class="item-owl">
+					                	<div class="test-review">
+						                	  <img src="images/m2.jpg" class="img-responsive" alt=""/>
+											  <h5>Daniele</h5>
+					                	    </div>
+					                </div>
+					                <div class="item-owl">
 					                	<div class="test-review">
 						                	  <img src="images/s2.jpg" class="img-responsive" alt=""/>
 											  <h5>Bride</h5>
