--- a/sucesso.html
+++ b/sucesso.html
@@ -188,6 +188,18 @@
 						<div class="sreen-gallery-cursual">
 							
 						       <div id="owl-demo" class="owl-carousel">
+									<div class="item-owl">
+										<div class="test-review">
+										  <img src="images/m1.jpg" class="img-responsive" alt=""/>
+										  <h5>Ingrid</h5>
+									    </div>
+									</div>
+									<div class="item-owl">
+									<div class="test-review">
+										  <img src="images/m2.jpg" class="img-responsive" alt=""/>
+										  <h5>Daniele</h5>
+									    </div>
+									</div>
 							      <div class="item-owl">
 					                		<div class="test-review">
 						                	  <img src="images/s1.jpg" class="img-responsive" alt=""/>
