--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 					                	    </div>
 					                </div>
 					                 <div class="item-owl">
-					                	    <div class="test-review">
+					                	    <div class="test-review-man">
 						                	  <img src="images/s3.jpg" class="img-responsive" alt=""/>
 											  <h5>Groom</h5>
 					                	    </div>
