--- a/index.html
+++ b/index.html
@@ -285,6 +285,12 @@
 						</figcaption>			
 					</figure>
 				</div>
+	     </div>
+	</div>
+
+	
+<div class="property-grids">
+     <div class="agile-homes-w3l  grid">
 				<div class="col-md-6 home-agile-text">
 				   <h4>Cerimônia de Casamento</h4>
 				   <p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
