--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</li>
 				<li>
 					<div class="banner_agile-info">
-						<h3>Nós vamos casar!</h3>
+						<h3>...vamos casar!</h3>
 						<p>FLÁVIO & DAIANE</p>
 						<div class="banner-mid-wthree hvr-buzz">
 							<img src="images/couple.png" />
@@ -150,7 +150,7 @@
 	</div>
 	<div class="banner-bottom">
 		<div class="wthree_title_agile">
-			<h3>Nossos <span>pais</span></h3>
+			<h3>Pais dos<span> noivos</span></h3>
 			<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 		</div>
 		<p class="sub_para">NOSSA BASE</p>
@@ -195,7 +195,7 @@
 	<!--/counter-->
 	<div class="agileinfo_counter_section">
 		<div class="wthree_title_agile">
-			<h3 class="h-t">A festa de casamento <span>está chegando</span></h3>
+			<h3 class="h-t">A festa <span>está chegando</span></h3>
 			<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 		</div>
 		<!--p class="sub_para two">FALTA POUCO!</p -->
@@ -346,7 +346,7 @@
 	<div class="wthree-news text-center">
 		<div class="container">
 			<div class="wthree_title_agile">
-				<h3>Nosso <span>Evento</span></h3>
+				<h3>Sobre o<span> evento</span></h3>
 				<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 
 			</div>
