--- a/index.html
+++ b/index.html
@@ -277,7 +277,18 @@
 							<h5>Filipe</h5>
 						</div>
 					</div>
-
+					<div class="item-owl">
+						<div class="test-review">
+							<img src="images/ma21.jpg" class="img-responsive" alt=""/>
+							<h5>Driely</h5>
+						</div>
+					</div>
+					<div class="item-owl">
+						<div class="test-review">
+							<img src="images/pa21.jpg" class="img-responsive" alt=""/>
+							<h5>Tiago</h5>
+						</div>
+					</div>
 					<div class="item-owl">
 						<div class="test-review">
 							<img src="images/pa11.jpg" class="img-responsive" alt=""/>
@@ -316,14 +327,8 @@
 					</div>
 					<div class="item-owl">
 						<div class="test-review">
-							<img src="images/s3.jpg" class="img-responsive" alt=""/>
-							<h5>Groom</h5>
-						</div>
-					</div>
-					<div class="item-owl">
-						<div class="test-review">
-							<img src="images/s5.jpg" class="img-responsive" alt=""/>
-							<h5>Bride</h5>
+							<img src="images/ma1.jpg" class="img-responsive" alt=""/>
+							<h5>Karina</h5>
 						</div>
 					</div>
 				</div>
