--- a/index.html
+++ b/index.html
@@ -142,14 +142,7 @@
 					</div>
 					<!-- end normal -->
 					<h4>Noivo</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur velit ac fringilla fermentum. Nulla sodales, magna eget pharetra feugiat nec vulputate purus nisl nec tortor.. </p>
-					<div class="icons">
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
+			
 				</div>
 				<div class="col-md-6 team-grid">
 					<!-- normal -->
@@ -162,19 +155,50 @@
 					</div>
 					<!-- end normal -->
 					<h4>Noiva</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur velit ac fringilla fermentum. Nulla sodales, magna eget pharetra feugiat nec vulputate purus nisl nec tortor.. </p>
-					<div class="icons">
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
+				</div>
+				<div>
+					<center>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur velit ac fringilla fermentum. Nulla sodales, magna eget pharetra feugiat nec vulputate purus nisl nec tortor.. </p>
+						<div class="wthree_title_agile">
+							<p><i class="fa fa-heart-o" aria-hidden="false"></i></p>
+						</div>
+					</center>
 				</div>
 				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
+		<!-- /property-grids -->
+	<div class="property-grids">
+		<div class="agile-homes-w3l  grid">
+			<div class="col-md-6 home-agile-left">
+				<figure class="effect-moses">
+					<img src="images/p1.jpg" alt="" />
+					<figcaption>
+						<h4>Clique e veja...</h4>
+						<p style="color:white;">
+							Lista de presentes
+							<a href="http://www.casasbahia.com.br"> 
+								<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
+							</a>
+						</p>
+					</figcaption>			
+				</figure>
+			</div>
+			<div class="col-md-6 home-agile-text">
+				<h4>Cerimônia de Casamento</h4>
+				<p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+				<div class="date">
+					<h5><i class="fa fa-calendar" aria-hidden="true"></i> 15 / 05 / 2018</h5>
+					<h5><i class="fa fa-clock-o" aria-hidden="true"></i> 10h até 20h</h5>
+				</div>
+				<div class="icon_wthree"><img src="images/ring.png" alt="" /></div>
+			</div>
+			<div class="clearfix"></div>	
+
+		</div>
+	</div>
+	<!-- //property-grids -->
 	<div class="banner-bottom">
 		<div class="wthree_title_agile">
 			<h3>Pais dos<span> noivos</span></h3>
@@ -337,40 +361,8 @@
 		</div>
 	</div>
 
-	<!-- /property-grids -->
-	<div class="property-grids">
-		<div class="agile-homes-w3l  grid">
-			<div class="col-md-6 home-agile-left">
-				<figure class="effect-moses">
-					<img src="images/p1.jpg" alt="" />
-					<figcaption>
-						<h4>Clique e veja...</h4>
-						<p style="color:white;">
-							Lista de presentes
-							<a href="http://www.casasbahia.com.br"> 
-								<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
-							</a>
-						</p>
-					</figcaption>			
-				</figure>
-			</div>
-			<div class="col-md-6 home-agile-text">
-				<h4>Cerimônia de Casamento</h4>
-				<p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				<div class="date">
-					<h5><i class="fa fa-calendar" aria-hidden="true"></i> 15 / 05 / 2018</h5>
-					<h5><i class="fa fa-clock-o" aria-hidden="true"></i> 10h até 20h</h5>
-				</div>
-				<div class="icon_wthree"><img src="images/ring.png" alt="" /></div>
-			</div>
-			<div class="clearfix"></div>	
-
-		</div>
-	</div>
-	<!-- //property-grids -->
-
 	<!-- /Events-->
-	<div class="wthree-news text-center">
+	<div class="wthree-news text-center" style="background-color: #FAF2F0">
 		<div class="container">
 			<div class="wthree_title_agile">
 				<h3>Sobre o<span> evento</span></h3>
