new photos of fathers

--- a/index.html
+++ b/index.html
@@ -223,13 +223,13 @@
 					</div>
 					<div class="item-owl">
 						<div class="test-review">
-							<img src="images/paif.jpg" class="img-responsive" alt=""/>
+							<img src="images/paid.jpg" class="img-responsive" alt=""/>
 							<h5>Raimundo</h5>
 						</div>
 					</div>
 					<div class="item-owl">
 						<div class="test-review">
-							<img src="images/maef.jpg" class="img-responsive" alt=""/>
+							<img src="images/maed.jpg" class="img-responsive" alt=""/>
 							<h5>Maria</h5>
 						</div>
 					</div>
