--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
 
 			</div>
 			<p class="sub_para">UM POUCO SOBRE NÓS</p>
+			<br/>
+			<br/>
+			<div style="width: 90%; margin: auto;">
+				<center>
+					<h3><b>Nós nos conhecemos em xpot, quando estavamos andando bla bla bla...
+					Nós nos conhecemos em xpot, quando estavamos andando bla bla bla...</b></h3>
+				</center>
+			</div>
+
 			<div class="inner_w3l_agile_grids">
 				<!-- Bottom to top-->
 				<div class="col-md-6 team-grid">
@@ -155,14 +164,6 @@
 					</div>
 					<!-- end normal -->
 					<h4>Noiva</h4>
-				</div>
-				<div>
-					<center>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur velit ac fringilla fermentum. Nulla sodales, magna eget pharetra feugiat nec vulputate purus nisl nec tortor.. </p>
-						<div class="wthree_title_agile">
-							<p><i class="fa fa-heart-o" aria-hidden="false"></i></p>
-						</div>
-					</center>
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -292,13 +293,13 @@
 					<div class="item-owl">
 						<div class="test-review">
 							<img src="images/m12.jpg" class="img-responsive" alt=""/>
-							<h5>Aline</h5>
+							<h5>Aliny</h5>
 						</div>
 					</div>
 					<div class="item-owl">
 						<div class="test-review">
 							<img src="images/pa12.jpg" class="img-responsive" alt=""/>
-							<h5>Filipe</h5>
+							<h5>Fillipe</h5>
 						</div>
 					</div>
 					<div class="item-owl">
@@ -362,7 +363,7 @@
 	</div>
 
 	<!-- /Events-->
-	<div class="wthree-news text-center" style="background-color: #FAF2F0">
+	<div class="wthree-news text-center" style="background-color: #fdf6f6">
 		<div class="container">
 			<div class="wthree_title_agile">
 				<h3>Sobre o<span> evento</span></h3>
