--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="index.html">Início</a></li>
 								<li><a href="gallery.html">Álbum</a></li>
+								<li><a href="contact.html">Dúvidas?</a></li>
 							</ul>
-
 						</nav>
 
 					</div>
@@ -501,8 +501,8 @@
 					<p>© 2017 Flávio & Daiane | Desenvolvido por 
 						<a href="http://www.linkedin.com/in/flavio7eixeira/">Flávio Teixeira</a></p>
 					</div>
-				</div>
 			</div>
+		</div>
 			<!-- //footer -->
 
 			<script src="js/bootstrap.min.js"></script>
